# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  digitalocean-spec.yaml  sqlx-data.json
.github/workflows/: general.yaml
configuration/: base.yaml
migrations/: 20220827102114_create_subscriptions_table.sql  20220918143401_crate_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
