[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
opentelemetry-jaeger = "0.16"
tracing-opentelemetry = "0.17"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
once_cell = "1"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1", features = ["v4"] }
time = "0.3"
config = "0.13"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
unicode-segmentation = "1"
validator = "0.16"

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
    "migrate",
    "offline"
]

[dev-dependencies]
claim = "0.5"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"

# Use old versions here due to an imcompatibility related to rand when using the new ones
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"